proyecto-backend-finalizado

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=4000
 DB_CNN=mongodb+srv://comision45i:i4UTtPaiGH1t74Xd@web45i.8aeb53b.mongodb.net/test
+SECRET_JWT=Esto-es-una-Pal4br@_secR3t4
